test/tests/errors/error-jumpout-not-in-func.sm
// true
// false
// false
/**/
/**/

program {
    func a(b: int): int {
        b + (true ? j(5) : 1)
    }

    var x: int = jumpout j: int in a(1);
}